k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-api-svc
  namespace: strapi-api
spec:
  selector:
    app: strapi-api

  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337

  type: ClusterIP
